# SyncCinemaNet_desktop

./: CMakeLists.txt  README.md  main.cpp
inc/: BaseClass.h
src/: BaseClass.cpp  main.cpp
